# STOCK

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  PLAN.md  README.md  STOCK.code-workspace  feature_gap_audit.md  feature_list.json  package-lock.json  pyproject.toml
.ai/: README.md  governance.md
.claude/: settings.local.json
.codex/: config.toml  logs_1.sqlite  state_5.sqlite
.harness/: init.sh
.omc/: prd.json  progress.txt  project-memory.json
.omx/: metrics.json
.playwright-cli/: page-2026-03-30T12-21-08-073Z.yml  page-2026-03-30T12-26-39-528Z.yml  page-2026-03-30T12-27-00-548Z.yml  page-2026-03-30T12-31-43-106Z.yml  page-2026-03-30T12-32-22-601Z.yml  page-2026-03-30T12-33-45-791Z.yml  page-2026-03-30T12-34-50-494Z.yml  page-2026-03-30T12-35-11-548Z.yml
.understand-anything/: knowledge-graph.json  meta.json
GOLD_material/: 入門.md  量化.md
Working_daily/: walkthrough.md
docs/: README.md  operator-guide.md  setup-audit-2026-03-27.md
heptabase_import/: 06_Capital_Allocation_System.md  07_Performance_Growth.md
launchd/: com.ro9air.stock-research.catchup.plist  com.ro9air.stock-research.quick-pulse.plist
prep/: orginnote.txt
project_devOps/: README.md
research/: market_update_mar2026.md  msft_ai_market_judgment.md
rules/: README.md  agent.md  investment-soul.md  orc-architecture.md  soul.md
scripts/: local_catchup.sh  quick_pulse_monitor.sh  research_ops.py
site/: dca_app.html  factor_analysis.html  index.html  portfolio_app.html  quick-pulse.html
spec/: new_todo.md
stock_research/: __init__.py  analytics.py  baselines.py  candidates.py  (+15 more)
(+255 files in other folders)
