[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-research-operator"
version = "0.1.0"
description = "Personal-first stock research decision OS for living equity research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=3.0,<4",
  "yfinance>=1.2,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
]

[project.scripts]
research-ops = "stock_research.cli:main"

[tool.setuptools.packages.find]
include = ["stock_research*"]

[tool.setuptools.package-data]
stock_research = [
  "templates/dashboard/*.html",
  "templates/dashboard/assets/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
